--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
         <div class="name">
-            <h1>Hi, <br> My name is <br> <span> Olawale (TheWarley)</span> <br>I build things for web.</h1>
+            <h1>Hi, <br> My name is <br> <span> Olawale (TheWarley)</span> <br>I build websites.</h1>
             <div>
                 <img src="./images/mereal-removebg-preview.png" alt="">
             </div>
