--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <a href="./index.html"><h2>TheWarley.dev</h2></a>
         </div>
     <h1 class="contact">
-        For any questions please mail me: <span>thewarleydev@seikoglobal.xyz</span>
+        For any questions please mail me: <span>dev@thewarley.xyz</span>
     </h1>
 </body>
 </html>
